--- a/index.html
+++ b/index.html
@@ -5,103 +5,118 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>EREBUS</title>
 <style>
-:root {
-  --color-primary: #000;
-  --color-background: #fff;
-  --color-accent: #e0e0e0;
-  --color-text: #333;
-  --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-* { margin:0; padding:0; box-sizing:border-box; }
-body { font-family: var(--font-family); background-color: var(--color-background); color: var(--color-text); line-height:1.6; }
+  :root {
+    --color-primary: #000;
+    --color-secondary: #555;
+    --color-background: #fff;
+    --color-accent: #e0e0e0;
+    --color-text: #333;
+    --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
 
-header {
-  background: var(--color-primary);
-  color: var(--color-background);
-  position: sticky;
-  top:0;
-  z-index:1000;
-  display:flex;
-  flex-direction:column;
-  transition: all 0.5s ease; /* transición suave */
-}
+  * { margin: 0; padding: 0; box-sizing: border-box; }
+  body { font-family: var(--font-family); background-color: var(--color-background); color: var(--color-text); line-height: 1.6; }
 
-.logo-container {
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  height:70px;
-  transition: all 0.5s ease;
-}
+  header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: var(--color-primary);
+    color: var(--color-background);
+    z-index: 1000;
+    transition: all 0.3s ease;
+  }
 
-.logo-container img { height:50px; margin-right:10px; transition: all 0.5s ease; }
-.logo-container h1 { font-size:1.8rem; color: var(--color-background); transition: all 0.5s ease; }
+  .logo-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    transition: all 0.3s ease;
+    overflow: hidden;
+  }
 
-/* Al hacer scroll: solo mueve el logo hacia arriba y reduce opacidad */
-.header-scrolled .logo-container {
-  opacity: 0;
-  margin-top: -70px; /* se desplaza hacia arriba suavemente */
-}
+  .logo-container img {
+    height: 50px;
+    margin-right: 10px;
+    transition: all 0.3s ease;
+  }
 
-nav {
-  display:flex;
-  justify-content:center;
-  padding:10px 0;
-}
+  .logo-container h1 {
+    font-size: 1.8rem;
+    transition: all 0.3s ease;
+  }
 
-nav ul {
-  list-style:none;
-  display:flex;
-  gap:30px;
-}
+  /* Clase cuando el header se oculta */
+  .header-hidden .logo-container {
+    height: 0;
+    transform: translateY(-100%);
+  }
 
-nav ul li a {
-  color: var(--color-background);
-  text-decoration:none;
-  font-weight:500;
-  padding:5px 10px;
-  transition: color 0.3s ease;
-}
+  .header-hidden nav ul {
+    margin-top: 0;
+  }
 
-nav ul li a:hover { color: var(--color-accent); }
+  nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    background: var(--color-primary);
+    padding: 10px 0;
+    transition: all 0.3s ease;
+  }
 
-.carousel { position:relative; overflow:hidden; max-height:500px; }
-.carousel-inner { display:flex; transition: transform 1s ease; }
-.carousel-item { min-width:100%; position:relative; }
-.carousel-item img { width:100%; display:block; object-fit:cover; }
+  nav ul li a {
+    color: var(--color-background);
+    text-decoration: none;
+    font-weight: 500;
+    transition: color 0.3s ease;
+  }
 
-section { padding:4rem 2rem; text-align:center; }
-section h2 { margin-bottom:2rem; font-size:2rem; color: var(--color-primary); }
+  nav ul li a:hover { color: var(--color-accent); }
 
-.products {
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-  gap:20px;
-}
+  .carousel { position: relative; overflow: hidden; max-height: 500px; margin-top: 70px; }
+  .carousel-inner { display: flex; transition: transform 1s ease; }
+  .carousel-item { min-width: 100%; transition: opacity 1s ease; }
+  .carousel-item img { width: 100%; display: block; object-fit: cover; }
 
-.product {
-  border:1px solid var(--color-accent);
-  border-radius:8px;
-  padding:1rem;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
+  section { padding: 4rem 2rem; text-align: center; }
+  section h2 { margin-bottom: 2rem; font-size: 2rem; color: var(--color-primary); }
 
-.product:hover { transform:translateY(-5px); box-shadow:0 4px 20px rgba(0,0,0,0.1); }
+  .products {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+  }
 
-.product img { width:100%; border-radius:8px; margin-bottom:1rem; }
-.product h3 { margin-bottom:0.5rem; color: var(--color-text); }
-.product p { margin-bottom:0.5rem; }
-.product .price { font-weight:bold; color: var(--color-primary); }
+  .product {
+    border: 1px solid var(--color-accent);
+    border-radius: 8px;
+    padding: 1rem;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
 
-footer { background: var(--color-primary); color: var(--color-background); text-align:center; padding:2rem 1rem; }
+  .product:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+  }
 
-.search-bar { margin:2rem auto; max-width:600px; display:flex; }
-.search-bar input { flex:1; padding:0.75rem; border:1px solid var(--color-accent); border-radius:4px 0 0 4px; outline:none; }
-.search-bar button { padding:0.75rem 1.5rem; border:none; background: var(--color-primary); color: var(--color-background); cursor:pointer; border-radius:0 4px 4px 0; transition: background 0.3s ease; }
-.search-bar button:hover { background: var(--color-secondary); }
+  .product img { width: 100%; border-radius: 8px; margin-bottom: 1rem; }
+  .product h3 { margin-bottom: 0.5rem; color: var(--color-secondary); }
+  .product p { margin-bottom: 0.5rem; }
+  .product .price { font-weight: bold; color: var(--color-primary); }
+
+  footer { background: var(--color-primary); color: var(--color-background); text-align: center; padding: 2rem 1rem; }
+
+  .search-bar { margin: 2rem auto; max-width: 600px; display: flex; }
+  .search-bar input { flex: 1; padding: 0.75rem; border: 1px solid var(--color-accent); border-radius: 4px 0 0 4px; outline: none; }
+  .search-bar button { padding: 0.75rem 1.5rem; border: none; background: var(--color-primary); color: var(--color-background); cursor: pointer; border-radius: 0 4px 4px 0; transition: background 0.3s ease; }
+  .search-bar button:hover { background: var(--color-secondary); }
 </style>
 </head>
 <body>
+
 <header id="mainHeader">
   <div class="logo-container">
     <img src="images/LOGOE.png" alt="Logo">
@@ -117,6 +132,7 @@ footer { background: var(--color-primary); color: var(--color-background); text-
   </nav>
 </header>
 
+<!-- Carrusel -->
 <section class="carousel" id="inicio">
   <div class="carousel-inner">
     <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+1" alt="Slide 1"></div>
@@ -125,105 +141,120 @@ footer { background: var(--color-primary); color: var(--color-background); text-
   </div>
 </section>
 
+<!-- Buscador -->
 <div class="search-bar">
   <input type="text" id="searchInput" placeholder="Buscar productos...">
   <button onclick="searchProducts()">Buscar</button>
 </div>
 
+<!-- Productos Ropa -->
 <section id="ropa">
   <h2>Nuestra Ropa</h2>
   <div class="products" id="ropaProducts"></div>
 </section>
 
+<!-- Productos Perfumes -->
 <section id="perfumes">
   <h2>Nuestros Perfumes</h2>
   <div class="products" id="perfumeProducts"></div>
 </section>
 
+<!-- Contacto -->
 <section id="contacto">
   <h2>Contacto</h2>
   <p>Email: contacto@tutienda.com</p>
   <p>Tel: +34 600 123 456</p>
 </section>
 
+<!-- Footer -->
 <footer>
   <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
 </footer>
 
 <script>
-// Carrusel
-const carouselInner = document.querySelector('.carousel-inner');
-const carouselItems = document.querySelectorAll('.carousel-item');
-let index = 0;
-function showNextSlide() {
-  index = (index + 1) % carouselItems.length;
-  carouselInner.style.transform = `translateX(-${index * 100}%)`;
-}
-setInterval(showNextSlide, 3000);
+  // Carrusel
+  const carouselInner = document.querySelector('.carousel-inner');
+  const carouselItems = document.querySelectorAll('.carousel-item');
+  let index = 0;
 
-// Productos
-const products = [
-  { id:1,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",category:"ropa",keywords:"PLAYERA OVERSIZE NEGRA 220G"},
-  { id:2,name:"Pantalón Chino",description:"Cómodo y versátil.",price:"€55.00",image:"https://via.placeholder.com/300x200",category:"ropa",keywords:"pantalón chino casual"},
-  { id:3,name:"Vestido de Noche",description:"Ideal para eventos formales.",price:"€120.00",image:"https://via.placeholder.com/300x200",category:"ropa",keywords:"vestido noche elegante formal"},
-  { id:4,name:"Chaqueta de Cuero",description:"Clásico que nunca pasa de moda.",price:"€150.00",image:"https://via.placeholder.com/300x200",category:"ropa",keywords:"chaqueta cuero moda"},
-  { id:5,name:"Perfume Floral",description:"Aroma fresco y duradero.",price:"€70.00",image:"https://via.placeholder.com/300x200",category:"perfumes",keywords:"perfume floral aroma fresco"},
-  { id:6,name:"Perfume Amaderado",description:"Notas profundas y masculinas.",price:"€85.00",image:"https://via.placeholder.com/300x200",category:"perfumes",keywords:"perfume amaderado intenso"},
-  { id:7,name:"Perfume Cítrico",description:"Energía y frescura.",price:"€65.00",image:"https://via.placeholder.com/300x200",category:"perfumes",keywords:"perfume cítrico fresco"},
-  { id:8,name:"Perfume Dulce",description:"Dulzura irresistible.",price:"€90.00",image:"https://via.placeholder.com/300x200",category:"perfumes",keywords:"perfume dulce sofisticado"}
-];
+  function showNextSlide() {
+    index = (index + 1) % carouselItems.length;
+    carouselInner.style.transform = `translateX(-${index * 100}%)`;
+  }
+  setInterval(showNextSlide, 3000);
 
-function renderProducts(){
-  const ropaContainer=document.getElementById('ropaProducts');
-  const perfumeContainer=document.getElementById('perfumeProducts');
-  ropaContainer.innerHTML='';
-  perfumeContainer.innerHTML='';
-  products.forEach(p=>{
-    const div=document.createElement('div');
-    div.classList.add('product');
-    div.innerHTML=`<img src="${p.image}" alt="${p.name}"><h3>${p.name}</h3><p>${p.description}</p><p class="price">${p.price}</p>`;
-    if(p.category==='ropa') ropaContainer.appendChild(div);
-    else perfumeContainer.appendChild(div);
-  });
-}
+  // Productos
+  const products = [
+    { id: 1, name: "PLAYERA OVERSIZE NEGRA 220G", description: "Comodidad superior y sensación de alta calidad.", price: "$220.00", image: "images/PLAYERANEGRA1.png", category: "ropa", keywords: "PLAYERA OVERSIZE NEGRA 220G" },
+    { id: 2, name: "Pantalón Chino", description: "Cómodo y versátil.", price: "€55.00", image: "https://via.placeholder.com/300x200", category: "ropa", keywords: "pantalón chino casual" },
+    { id: 3, name: "Vestido de Noche", description: "Ideal para eventos formales.", price: "€120.00", image: "https://via.placeholder.com/300x200", category: "ropa", keywords: "vestido noche elegante formal" },
+    { id: 4, name: "Chaqueta de Cuero", description: "Un clásico que nunca pasa de moda.", price: "€150.00", image: "https://via.placeholder.com/300x200", category: "ropa", keywords: "chaqueta cuero moda" },
+    { id: 5, name: "Perfume Floral", description: "Aroma fresco y duradero.", price: "€70.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume floral aroma fresco" },
+    { id: 6, name: "Perfume Amaderado", description: "Notas profundas y masculinas.", price: "€85.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume amaderado intenso" },
+    { id: 7, name: "Perfume Cítrico", description: "Energía y frescura.", price: "€65.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume cítrico fresco" },
+    { id: 8, name: "Perfume Dulce", description: "Dulzura irresistible y sofisticada.", price: "€90.00", image: "https://via.placeholder.com/300x200", category: "perfumes", keywords: "perfume dulce sofisticado" }
+  ];
 
-function searchProducts(){
-  const query=document.getElementById('searchInput').value.toLowerCase();
-  const filtered=products.filter(p=>p.name.toLowerCase().includes(query)||p.keywords.includes(query));
-  const ropaContainer=document.getElementById('ropaProducts');
-  const perfumeContainer=document.getElementById('perfumeProducts');
-  ropaContainer.innerHTML='';
-  perfumeContainer.innerHTML='';
-  filtered.forEach(p=>{
-    const div=document.createElement('div');
-    div.classList.add('product');
-    div.innerHTML=`<img src="${p.image}" alt="${p.name}"><h3>${p.name}</h3><p>${p.description}</p><p class="price">${p.price}</p>`;
-    if(p.category==='ropa') ropaContainer.appendChild(div);
-    else perfumeContainer.appendChild(div);
-  });
-}
+  function renderProducts() {
+    const ropaContainer = document.getElementById('ropaProducts');
+    const perfumeContainer = document.getElementById('perfumeProducts');
+    ropaContainer.innerHTML = '';
+    perfumeContainer.innerHTML = '';
 
-renderProducts();
-
-// Scroll fluido sin brincos
-const header = document.getElementById('mainHeader');
-const SCROLL_THRESHOLD = 100;
-
-let lastScrollY = window.scrollY;
-window.addEventListener('scroll', () => {
-  const currentScroll = window.scrollY;
-
-  if(currentScroll > SCROLL_THRESHOLD && currentScroll > lastScrollY){
-    // Scroll hacia abajo
-    header.classList.add('header-scrolled');
-  } else if(currentScroll < lastScrollY || currentScroll <= SCROLL_THRESHOLD){
-    // Scroll hacia arriba o por debajo del umbral
-    header.classList.remove('header-scrolled');
+    products.forEach(product => {
+      const div = document.createElement('div');
+      div.classList.add('product');
+      div.innerHTML = `
+        <img src="${product.image}" alt="${product.name}">
+        <h3>${product.name}</h3>
+        <p>${product.description}</p>
+        <p class="price">${product.price}</p>
+      `;
+      if (product.category === 'ropa') ropaContainer.appendChild(div);
+      else perfumeContainer.appendChild(div);
+    });
   }
 
-  lastScrollY = currentScroll;
-});
+  function searchProducts() {
+    const query = document.getElementById('searchInput').value.toLowerCase();
+    const filtered = products.filter(p => p.name.toLowerCase().includes(query) || p.keywords.toLowerCase().includes(query));
+    const ropaContainer = document.getElementById('ropaProducts');
+    const perfumeContainer = document.getElementById('perfumeProducts');
+    ropaContainer.innerHTML = '';
+    perfumeContainer.innerHTML = '';
+
+    filtered.forEach(product => {
+      const div = document.createElement('div');
+      div.classList.add('product');
+      div.innerHTML = `
+        <img src="${product.image}" alt="${product.name}">
+        <h3>${product.name}</h3>
+        <p>${product.description}</p>
+        <p class="price">${product.price}</p>
+      `;
+      if (product.category === 'ropa') ropaContainer.appendChild(div);
+      else perfumeContainer.appendChild(div);
+    });
+  }
+
+  renderProducts();
+
+  // Animación del header al hacer scroll
+  const header = document.getElementById('mainHeader');
+  let lastScrollTop = 0;
+
+  window.addEventListener('scroll', () => {
+    const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+
+    if(scrollTop > lastScrollTop && scrollTop > 50){
+      // Bajando
+      header.classList.add('header-hidden');
+    } else {
+      // Subiendo
+      header.classList.remove('header-hidden');
+    }
+    lastScrollTop = scrollTop <= 0 ? 0 : scrollTop;
+  });
 </script>
 </body>
 </html>
-
