--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
     transform: translateY(-100%);
   }
 
-  .header-hidden nav ul { margin-top: 0; }
+  .header-hidden nav ul {
+    margin-top: 0;
+  }
 
   nav ul {
     list-style: none;
@@ -73,11 +75,21 @@
 
   nav ul li a:hover { color: var(--color-accent); }
 
-  .carousel { position: relative; overflow: hidden; max-height: 500px; margin-top: 70px; }
+  .carousel { position: relative; overflow: hidden; margin-top: 70px; }
   .carousel-inner { display: flex; transition: transform 1s ease; }
-  .carousel-item { min-width: 100%; transition: opacity 1s ease; position: relative; }
+  .carousel-item {
+    min-width: 100%;
+    transition: opacity 1s ease;
+    position: relative;
+    height: 500px; /* altura fija para video e imágenes */
+  }
+
   .carousel-item img,
-  .carousel-item video { width: 100%; display: block; object-fit: cover; }
+  .carousel-item video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
   section { padding: 4rem 2rem; text-align: center; }
   section h2 { margin-bottom: 2rem; font-size: 2rem; color: var(--color-primary); }
@@ -95,7 +107,11 @@
     transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
 
-  .product:hover { transform: translateY(-5px); box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
+  .product:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+  }
+
   .product img { width: 100%; border-radius: 8px; margin-bottom: 1rem; }
   .product h3 { margin-bottom: 0.5rem; color: var(--color-secondary); }
   .product p { margin-bottom: 0.5rem; }
@@ -126,12 +142,17 @@
   </nav>
 </header>
 
-<!-- Carrusel con video -->
+<!-- Carrusel -->
 <section class="carousel" id="inicio">
   <div class="carousel-inner">
+    <!-- Video -->
     <div class="carousel-item">
-      <video src="VIDEO1.mp4" autoplay muted loop></video>
+      <video autoplay muted loop playsinline>
+        <source src="VIDEO1.mp4" type="video/mp4">
+        Tu navegador no soporta video.
+      </video>
     </div>
+    <!-- Imágenes -->
     <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+2" alt="Slide 2"></div>
     <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+3" alt="Slide 3"></div>
   </div>
@@ -162,33 +183,24 @@
   <p>Tel: +34 600 123 456</p>
 </section>
 
+<!-- Footer -->
 <footer>
   <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
 </footer>
 
 <script>
+  // Carrusel
   const carouselInner = document.querySelector('.carousel-inner');
   const carouselItems = document.querySelectorAll('.carousel-item');
   let index = 0;
 
   function showNextSlide() {
-    // Si el slide es video, esperar a que termine
-    const currentItem = carouselItems[index];
-    const video = currentItem.querySelector('video');
-    if(video){
-      video.onended = () => {
-        index = (index + 1) % carouselItems.length;
-        carouselInner.style.transform = `translateX(-${index * 100}%)`;
-      }
-      video.play();
-    } else {
-      index = (index + 1) % carouselItems.length;
-      carouselInner.style.transform = `translateX(-${index * 100}%)`;
-    }
+    index = (index + 1) % carouselItems.length;
+    carouselInner.style.transform = `translateX(-${index * 100}%)`;
   }
+  setInterval(showNextSlide, 5000); // 5s para ver video
 
-  setInterval(showNextSlide, 5000); // Solo cambia cada 5 segundos si no hay video
-
+  // Productos
   const products = [
     { id: 1, name: "PLAYERA OVERSIZE NEGRA 220G", description: "Comodidad superior y sensación de alta calidad.", price: "$220.00", image: "images/PLAYERANEGRA1.png", category: "ropa", keywords: "PLAYERA OVERSIZE NEGRA 220G" },
     { id: 2, name: "Pantalón Chino", description: "Cómodo y versátil.", price: "€55.00", image: "https://via.placeholder.com/300x200", category: "ropa", keywords: "pantalón chino casual" },
@@ -205,7 +217,6 @@
     const perfumeContainer = document.getElementById('perfumeProducts');
     ropaContainer.innerHTML = '';
     perfumeContainer.innerHTML = '';
-
     products.forEach(product => {
       const div = document.createElement('div');
       div.classList.add('product');
@@ -215,7 +226,7 @@
         <p>${product.description}</p>
         <p class="price">${product.price}</p>
       `;
-      if(product.category === 'ropa') ropaContainer.appendChild(div);
+      if (product.category === 'ropa') ropaContainer.appendChild(div);
       else perfumeContainer.appendChild(div);
     });
   }
@@ -227,7 +238,6 @@
     const perfumeContainer = document.getElementById('perfumeProducts');
     ropaContainer.innerHTML = '';
     perfumeContainer.innerHTML = '';
-
     filtered.forEach(product => {
       const div = document.createElement('div');
       div.classList.add('product');
@@ -237,7 +247,7 @@
         <p>${product.description}</p>
         <p class="price">${product.price}</p>
       `;
-      if(product.category === 'ropa') ropaContainer.appendChild(div);
+      if (product.category === 'ropa') ropaContainer.appendChild(div);
       else perfumeContainer.appendChild(div);
     });
   }
