--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <section class="carousel" id="inicio">
   <!-- Video de fondo -->
   <video id="background-video" autoplay muted loop playsinline>
-    <source src="VIDEO1.mp4" type="video/mp4">
+    <source src="VIDEO1.mp4" type="images/VIDEO1.mp4">
     Tu navegador no soporta el video.
   </video>
 
