--- a/index.html
+++ b/index.html
@@ -36,15 +36,21 @@
     overflow: hidden;
   }
 
-  .logo-container img { height: 50px; margin-right: 10px; transition: all 0.3s ease; }
-  .logo-container h1 { font-size: 1.8rem; transition: all 0.3s ease; }
+  .logo-container img {
+    height: 50px;
+    margin-right: 10px;
+    transition: all 0.3s ease;
+  }
+
+  .logo-container h1 {
+    font-size: 1.8rem;
+    transition: all 0.3s ease;
+  }
 
   .header-hidden .logo-container {
     height: 0;
     transform: translateY(-100%);
   }
-
-  .header-hidden nav ul { margin-top: 0; }
 
   nav ul {
     list-style: none;
@@ -65,33 +71,13 @@
 
   nav ul li a:hover { color: var(--color-accent); }
 
-  /* Video de fondo */
-  #background-video {
-    position: absolute;
-    top: 0;
-    left: 0;
+  .carousel { position: relative; overflow: hidden; max-height: 500px; margin-top: 70px; }
+  .carousel-inner { display: flex; transition: transform 1s ease; }
+  .carousel-item { min-width: 100%; transition: opacity 1s ease; position: relative; }
+  .carousel-item img, .carousel-item video {
     width: 100%;
-    height: 100%;
+    display: block;
     object-fit: cover;
-    z-index: -1;
-  }
-
-  .carousel {
-    position: relative;
-    overflow: hidden;
-    max-height: 500px;
-    margin-top: 70px;
-  }
-
-  .carousel-inner {
-    display: flex;
-    transition: transform 1s ease;
-  }
-
-  .carousel-item {
-    min-width: 100%;
-    transition: opacity 1s ease;
-    position: relative;
   }
 
   section { padding: 4rem 2rem; text-align: center; }
@@ -110,10 +96,7 @@
     transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
 
-  .product:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-  }
+  .product:hover { transform: translateY(-5px); box-shadow: 0 4px 20px rgba(0,0,0,0.1); }
 
   .product img { width: 100%; border-radius: 8px; margin-bottom: 1rem; }
   .product h3 { margin-bottom: 0.5rem; color: var(--color-secondary); }
@@ -145,18 +128,17 @@
   </nav>
 </header>
 
-<!-- Carrusel con video -->
+<!-- Carrusel -->
 <section class="carousel" id="inicio">
-  <!-- Video de fondo -->
-  <video id="background-video" autoplay muted loop playsinline>
-    <source src="VIDEO1.mp4" type="images/VIDEO1.mp4">
-    Tu navegador no soporta el video.
-  </video>
-
   <div class="carousel-inner">
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Slide+1" alt="Slide 1"></div>
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Slide+2" alt="Slide 2"></div>
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Slide+3" alt="Slide 3"></div>
+    <div class="carousel-item">
+      <video autoplay muted loop playsinline>
+        <source src="images/VIDEO1.mp4" type="video/mp4">
+        Tu navegador no soporta el elemento de video.
+      </video>
+    </div>
+    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+2" alt="Slide 2"></div>
+    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+3" alt="Slide 3"></div>
   </div>
 </section>
 
@@ -185,6 +167,7 @@
   <p>Tel: +34 600 123 456</p>
 </section>
 
+<!-- Footer -->
 <footer>
   <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
 </footer>
