--- a/index.html
+++ b/index.html
@@ -71,13 +71,18 @@
 
   nav ul li a:hover { color: var(--color-accent); }
 
+  /* Carrusel */
   .carousel { position: relative; overflow: hidden; max-height: 500px; margin-top: 70px; }
   .carousel-inner { display: flex; transition: transform 1s ease; }
-  .carousel-item { min-width: 100%; transition: opacity 1s ease; position: relative; }
+  .carousel-item { min-width: 100%; position: relative; display: none; }
+  .carousel-item.active { display: block; }
+
   .carousel-item img, .carousel-item video {
     width: 100%;
+    max-height: 500px;
     display: block;
-    object-fit: cover;
+    object-fit: contain; /* Mantiene proporciones */
+    object-position: center;
   }
 
   section { padding: 4rem 2rem; text-align: center; }
@@ -131,14 +136,18 @@
 <!-- Carrusel -->
 <section class="carousel" id="inicio">
   <div class="carousel-inner">
-    <div class="carousel-item">
-      <video autoplay muted loop playsinline>
+    <div class="carousel-item active">
+      <video autoplay muted playsinline>
         <source src="images/VIDEO1.mp4" type="video/mp4">
         Tu navegador no soporta el elemento de video.
       </video>
     </div>
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+2" alt="Slide 2"></div>
-    <div class="carousel-item"><img src="https://via.placeholder.com/1200x500?text=Hero+3" alt="Slide 3"></div>
+    <div class="carousel-item">
+      <img src="https://via.placeholder.com/1200x500?text=Hero+2" alt="Slide 2">
+    </div>
+    <div class="carousel-item">
+      <img src="https://via.placeholder.com/1200x500?text=Hero+3" alt="Slide 3">
+    </div>
   </div>
 </section>
 
@@ -173,16 +182,27 @@
 </footer>
 
 <script>
-  // Carrusel
-  const carouselInner = document.querySelector('.carousel-inner');
+  // Carrusel mejorado
   const carouselItems = document.querySelectorAll('.carousel-item');
   let index = 0;
 
   function showNextSlide() {
+    carouselItems[index].classList.remove('active');
     index = (index + 1) % carouselItems.length;
-    carouselInner.style.transform = `translateX(-${index * 100}%)`;
+    carouselItems[index].classList.add('active');
+
+    // Si el nuevo slide es un video, esperar a que termine
+    const video = carouselItems[index].querySelector('video');
+    if(video) {
+      video.play();
+      video.onended = showNextSlide;
+    }
   }
-  setInterval(showNextSlide, 3000);
+
+  // Iniciar video si el primer slide es video
+  const firstVideo = carouselItems[0].querySelector('video');
+  if(firstVideo) firstVideo.onended = showNextSlide;
+  else setInterval(showNextSlide, 5000); // imágenes cambiar cada 5s
 
   // Productos
   const products = [
