--- a/index.html
+++ b/index.html
@@ -86,16 +86,15 @@
   /* Grid de productos */
   .products {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(4, 1fr); /* 4 productos por fila en PC */
     gap: 20px;
-    justify-content: start; /* mantiene el tamaño original en PC */
   }
 
   .product {
     border: 1px solid var(--color-accent);
     border-radius: 8px;
     padding: 1rem;
-    width: 100%;
+    max-width: 100%; /* evita que se estire */
     transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
 
@@ -106,10 +105,13 @@
   .product p { margin-bottom: 0.5rem; }
   .product .price { font-weight: bold; color: var(--color-primary); }
 
+  /* Responsive */
+  @media (max-width: 992px) {
+    .products { grid-template-columns: repeat(2, 1fr); } /* 2 productos por fila en tablet */
+  }
+
   @media (max-width: 600px) {
-    .products {
-      grid-template-columns: repeat(2, 1fr); /* 2 productos por fila en móvil */
-    }
+    .products { grid-template-columns: 1fr; } /* 1 producto por fila en móvil */
   }
 
   footer { background: var(--color-primary); color: var(--color-background); text-align: center; padding: 2rem 1rem; }
